2009-04-22  Manuel Arostegui <marostegui@artica.es>

	* operation/agentes/sla_view.php: Fixed bug #2777504

2009-04-21  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* include/functions_ui.php: Added get_url_refresh which gets the correct
	url to refresh a page against instead of manually reconstructing for each
	form. Modified process_page_head to use this new function
	
	* general/header.php: Use of new function get_url_refresh. Fixes some
	minor annoyances I had with this refresh when groups were selected with
	a post
	
	* ajax.php: Error message didn't display the right page name
	
	* operation/agentes/estado_agente.php: Fixed bug #2770377

2009-04-21  Sancho Lerena <slerena@gmail.com>

	* operation/servers/view_server.php: New stats for server (threads,
	modules in queue) and new render view (more useful and with tips in head).

	* functions_db.php: Server info server[img] don't return "master" icon.
	This icon is now stored in server[master_img].

2009-04-21  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/pt_BR.po, include/languages/it.mo,
	  include/languages/sk.po, include/languages/pt.mo,
	  include/languages/pt_BR.mo, include/languages/fr.po,
	  include/languages/sk.mo, include/languages/fr.mo,
	  include/languages/ru.po, include/languages/it.po,
	  include/languages/pt.po, include/languages/ru.mo: Updated
	  Brazilian Portuguese, Italian, Slovak, French, Russian and
	  Portuguese translations thanks to Rosetta translators.

	* include/languages/index.pot: Updated po template.

2009-04-21  Jorge Gonzalez  <jorgegonz@artica.es>

        * include/languages/es.po, include/languages/es.mo: Updated
          Spanish translation.

        * include/languages/index.pot: Updated po template.

2009-04-21  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated
	  Spanish translation.

	* include/languages/index.pot: Updated po template.

	* godmode/agentes/module_manager_editor_network.php,