@@ -1,5 +1,13 @@
 2009-04-22  Manuel Arostegui <marostegui@artica.es>
 
+	* install.php: Fixed bug #2777317
+
+	* godmode/agentes/planned_downtime.php: Fixed bug #2777475
+
+	* godmode/reporting/map_builder.php: Fixed bug #2777347
+
+2009-04-22  Manuel Arostegui <marostegui@artica.es>
+
 	* operation/agentes/sla_view.php: Fixed bug #2777504
 
 2009-04-21  Evi Vanoost <vanooste@rcbi.rochester.edu>
